[package]
name = "ctftimesearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
env_logger = "0.11.2"
indicatif = "0.17.8"
log = "0.4.20"
mdka = "1.2.4"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tantivy = "0.21.1"
termimad = "0.29.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
