[package]
name = "ctftimesearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-channel = "2.2.0"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
indicatif = "0.17.8"
log = "0.4.20"
mdka = "1.2.4"
num_cpus = "1.16.0"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
